feat: improve bilingual mode and embedded python support
- Fix Ukrainian misidentification as Russian in bilingual mode
- Add robust embedded Python discovery and automatic dev setup
- Optimize model caching by checking global Hugging Face cache
- Update .gitignore to exclude local python and model folders

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ project.fragment.lock.json
 artifacts/
 
 # Python
+python/
 __pycache__/
 *.py[cod]
 *$py.class
@@ -62,6 +63,7 @@ htmlcov/
 *.log
 
 # Whisper models cache
+models/
 .cache/
 *.pt
 
