remove unnecessary clipboard magic

--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,5 @@
   "hotkey": "ScrollLock",
   "pasteShortcut": "Ctrl+Shift+V",
   "model": "large-v3",
-  "device": "cuda",
-  "restoreClipboard": true,
-  "clipboardRestoreDelayMs": 400
+  "device": "cuda"
 }
