--- a/src/app/VoicePaste.csproj
+++ b/src/app/VoicePaste.csproj
@@ -9,6 +9,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <AssemblyName>VoicePaste</AssemblyName>
     <RootNamespace>VoicePaste</RootNamespace>
+    <ApplicationIcon>Resources\icon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,6 +26,10 @@
     <!-- Copy Embedded Python (if exists) -->
     <None Update="..\..\python\**\*">
       <Link>python\%(RecursiveDir)%(FileName)%(Extension)</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <!-- Icon resources -->
+    <None Update="Resources\**\*">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
